--- a/Saxa/build.gradle
+++ b/Saxa/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.6.0-SNAPSHOT'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id 'war'
 }
 
 group = 'com.saxa'
@@ -16,11 +17,17 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation group: 'org.thymeleaf', name: 'thymeleaf', version: '3.1.0.M1'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: '2.6.4'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.0.0'
 //	testImplementation group: 'junit', name: 'junit', version: '4.12'
 	testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.5.6'
-	
+//	implementation group: 'org.springframework', name: 'spring-hibernate', version: '1.2.9'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    runtimeOnly 'mysql:mysql-connector-java:8.0.17'
+	implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.4.0-b180830.0359'
+    
 	
 }
 
