--- a/Saxa/build.gradle
+++ b/Saxa/build.gradle
@@ -1,6 +1,7 @@
 plugins {
 	id 'org.springframework.boot' version '2.6.0-SNAPSHOT'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'java-library'
 	id 'java'
 	id 'war'
 }
@@ -33,4 +34,8 @@ dependencies {
 
 test {
 	useJUnitPlatform()
+}
+
+war {
+	webXml = file('src/WEB-INF/web.xml')
 }
