--- a/Spring/Springdemo/Springdemo/build.gradle
+++ b/Spring/Springdemo/Springdemo/build.gradle
@@ -7,7 +7,7 @@ plugins {
 
 group = 'com.saxa'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '1.8'
 
 configurations {
 	compileOnly {
@@ -31,7 +31,11 @@ dependencies {
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
-
+	
+	implementation group: 'io.swagger.core.v3', name: 'swagger-annotations', version: '2.2.0'
+	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
+	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
+	
 }
 
 tasks.named('test') {
